# voice-ad

./: .env.example  .gitignore  README.md  flake.nix  pyproject.toml  pyrnnoise.py  real_time.py  rnnoise.py  shell.nix  silero-vad-test.py  silero-vad.py  speech-recognition.sh  update_model.py  visualize.py
pysilero-vad/: miccheck.sh  pyproject.toml  shell.nix  silero-vad-test.py  speech-rec.service  test.py
pysilero-vad/pysilero_vad.egg-info/: PKG-INFO  requires.txt
