[project]
name = "voice-ad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "pyaudio>=0.2.14",
  "pyqt6>=6.9.0",
  "torch>=2.6",
  "torchaudio>=2.6.0",
]
